For the Beauty of Bits v0.5

--- a/大纲.md
+++ b/大纲.md
@@ -9,12 +9,12 @@
 
 ## Find
 
-+ ST表：FBB`<SparseTable>`中的`SparseTable`类。
++ ST表：FBB\Find`<SparseTable>`中的`SparseTable`类。
 + 二分查找：STL`<algorithm>`中的`lower_bound`函数和`upper_bound`函数 & FBB\Find`<BinarySearch>`中的`BinarySearch`类。
 + 二叉堆：STL`<queue>`中的`priority_queue`类 & FBB\Find`<BinaryHeap>`中的`BinaryHeap`类。
 + 分块：
-+ 树状数组：
-+ 线段树
++ 树状数组：FBB\Find`<BinaryIndexedTree>`中的`BinaryIndexedTree`类。
++ 线段树：FBB\Find`<SegmentTree>`中的`SegmentTree`类。
 
 ## Graph
 
