For the Beauty of Bits v0.6

--- a/大纲.md
+++ b/大纲.md
@@ -15,6 +15,8 @@
 + 分块：
 + 树状数组：FBB\Find`<BinaryIndexedTree>`中的`BinaryIndexedTree`类。
 + 线段树：FBB\Find`<SegmentTree>`中的`SegmentTree`类。
++ 左偏树：FBB\Find`<LeftTree>`中的`LeftTree`类。
++ 配对堆：FBB\Find`<PairHeap>`中的`PairHeap`类。
 
 ## Graph
 
@@ -22,15 +24,15 @@
 + SPFA算法：FBB\Graph`<SPFA>`中的`SPFA`类。
 + 并查集：FBB\Graph`<UnionFind>`中的`UnionFind`类。
 + 邻接矩阵存图：FBB\Graph`<GraphWithVector>`中的`GraphWithVcetor`类。
-+ 邻接表存图：
-+ 链式前向星存图：
++ 邻接矩阵网络流：FBB\Graph`<NerworkFlow>`中的`NetWorkFlow`类。
++ Dinic算法：FBB\Graph`<Dinic>`中的`Dinic`类。
 
 ## Math
 
 + 前缀和：STL`<numeric>`的`partial_sum`函数。
 + 快速幂：FBB\Math`<QuickPower>`中的`pow`函数。
 + 扩展欧几里得算法：FBB\MathD`<ExtenxionGCD>`中的`exgcd`函数。
-+ 欧几里得算法：FBB\Math\`<GCD>`中的`gcd`函数。
++ 欧几里得算法：FBB\Math`<GCD>`中的`gcd`函数。
 + 矩阵：FBB\Math`<Matrix>`中的`Matrix`类。
 + 高精度：
 
@@ -49,6 +51,6 @@
 + KMP：FBB\String`<KMP>`中的`KMP`类。
 + Manacher：FBB\String`<Manacher>`中的`Manacher`类。
 + Trie树：FBB\String`<Trie>`中的`Trie`类。
-+ 后缀数组：
++ 后缀数组：FBB\String`<SuffixArray>`中的`SuffixArray`类。
 + 后缀自动机：
 + 回文自动机：
