For the Beauty of Bits v0.7

--- a/大纲.md
+++ b/大纲.md
@@ -27,6 +27,10 @@
 + 邻接矩阵网络流：FBB\Graph`<NerworkFlow>`中的`NetWorkFlow`类。
 + Dinic算法：FBB\Graph`<Dinic>`中的`Dinic`类。
 
+## IO
+
++ 输入：FBB\IO`<Read>`中的`read`函数；FBB\IO`<Read>`中的`Read`类。
+
 ## Math
 
 + 前缀和：STL`<numeric>`的`partial_sum`函数。
@@ -34,7 +38,8 @@
 + 扩展欧几里得算法：FBB\MathD`<ExtenxionGCD>`中的`exgcd`函数。
 + 欧几里得算法：FBB\Math`<GCD>`中的`gcd`函数。
 + 矩阵：FBB\Math`<Matrix>`中的`Matrix`类。
-+ 高精度：
++ 高精度：FBB\Math`<BigNum>`中的`BigNum`类。
++ 快速傅里叶变换FBB\Math`<FastFourierTransform>`中的`FastFourierTransform`类。
 
 ## Sort
 
@@ -52,5 +57,3 @@
 + Manacher：FBB\String`<Manacher>`中的`Manacher`类。
 + Trie树：FBB\String`<Trie>`中的`Trie`类。
 + 后缀数组：FBB\String`<SuffixArray>`中的`SuffixArray`类。
-+ 后缀自动机：
-+ 回文自动机：
