For the Beauty of Bits v0.8

--- a/大纲.md
+++ b/大纲.md
@@ -26,6 +26,8 @@
 + 邻接矩阵存图：FBB\Graph`<GraphWithVector>`中的`GraphWithVcetor`类。
 + 邻接矩阵网络流：FBB\Graph`<NerworkFlow>`中的`NetWorkFlow`类。
 + Dinic算法：FBB\Graph`<Dinic>`中的`Dinic`类。
++ ISAP算法：FBB\Graph`<ISAP>`中的`ISAP`类。
++ Kosaraju算法：FBB\Graph`<Kosaraju>`中的`Kosaraju`类。
 
 ## IO
 
